# multi_axis_controller

./: README.md
interface/: .clang-format  package.xml
interface/include/: config_parser.hpp  connection.hpp  connection_manager.hpp  interface.hpp  message_queue.hpp  udp_connection.hpp
interface/src/: connection_manager.cpp  tcp_connection.cpp  tcp_server.cpp  udp_server.cpp
rt_interface/: .arcconfig  .gitmodules  CMakeLists.txt  package.xml
rt_interface/config/: robot_hardware_config.json  rt_connection.json
rt_interface/include/: ButlerSpecs.h  actuator.hpp  actuator_config_parser.hpp  actuator_controls.hpp  actuator_info.hpp  actuator_params.hpp  global_map.h  multi_axis_controller.hpp  path_feedback.h  protobuf_parser.hpp  protocol.hpp  protocol_parser.hpp  ros_interface.hpp  rt_interface.hpp  tcp_connection_map.hpp
rt_interface/interface/: CMakeLists.txt
rt_interface/interface/include/: tcp_connection.hpp  tcp_server.hpp  udp_server.hpp
rt_interface/interface/src/: config_parser.cpp  udp_connection.cpp
rt_interface/launch/: rt_interface.launch  rt_interface_debug.launch
rt_interface/msg/: IPU.msg  heading.msg
rt_interface/src/: TestVolocities.txt  actuator_config_parser.cpp  global_map.cpp  global_map.yaml  global_map_for_move.csv  multi_axis_controller.cpp  path_feedback.cpp  protobuf_parser.cpp  protocol_parser.cpp  ros_interface.cpp  rt_interface.cpp  rt_ros_interface_node.cpp
rt_interface/test_scripts/: motor_feedback_client.py  tcp_client.py  udp_client.py
